tests/data/parseerror/invalid-class-10.php
<?php

class TokenReflection_Test_ParseInvalidClass15
{
	use Trait1 {foo insteadof Trait0::bar}

}
